--- a/common/roles/tasks/main.yml
+++ b/common/roles/tasks/main.yml
@@ -1,17 +1,19 @@
 ---
 # Common plays suitable for all Red Hat-based nodes
 
-- name: Enable EPEL
-  yum: name=epel-release state=present
-
-- name: Install Vim
-  yum: name=vim-enhanced state=present
-
-- name: Install screen
-  yum: name=screen state=present
-
 - name: Update yum cache
   yum: update_cache=yes
 
 - name: Apply initial package set updates
   yum: name=* state=latest
+
+- name: Install various packages missing from cloud images
+  yum: name={{ item }} enablerepo=epel state=present
+  when: ansible_os_family == "RedHat"
+  with_items:
+    - vim-enhanced
+    - screen
+    - tmux
+    - sysstat
+    - the_silver_searcher
+
